plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.team19'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

configurations {
    configureEach {
        resolutionStrategy {
            force 'com.google.guava:guava:32.0.1-android'
            force 'com.google.protobuf:protobuf-java:4.28.2'
        }
    }
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    // WebFlux
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Spring Web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // Spring Data JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // Spring Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // Sprig Batch
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    // Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // cache
    implementation("org.springframework.boot:spring-boot-starter-cache")
    implementation("com.github.ben-manes.caffeine:caffeine:3.1.8")
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // AWS SDK v2 (S3)
    implementation platform("software.amazon.awssdk:bom:2.25.61")
    implementation "software.amazon.awssdk:s3"

    // Firebase Admin SDK
    implementation group: 'com.google.firebase', name: 'firebase-admin', version: '9.2.0'

    implementation 'org.apache.commons:commons-lang3:3.18.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'

    // Database
    runtimeOnly 'com.mysql:mysql-connector-j' // MySQL (운영용)
    runtimeOnly 'com.h2database:h2' // H2 (개발용)

    // JJWT (JWT 라이브러리)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.batch:spring-batch-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Mapillary mock
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'

    // S3Mock
    testImplementation("com.adobe.testing:s3mock-junit5:3.8.0")

    // H2 (테스트 DB)
    testRuntimeOnly 'com.h2database:h2'
}

tasks.named('test') {
    useJUnitPlatform()
}
